# christine_is_sleeping

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
tts/: TtsFactory.py
tts/api/: TtsEngine.py
tts/elevenlabs/: Client.py  ElevenLabsEngine.py
tts/polly/: PollyEngine.py
