[tool.poetry]
name = "christine-is-sleeping"
version = "0.1.0"
description = ""
authors = ["Tadgh <garygrantgraham@gmail.com>"]
readme = "README.md"
packages = [{include = "christine_is_sleeping"}]

[tool.poetry.dependencies]
python = "^3.10"
discord-py =  {version =  "^2.1.0", extras = ["voice"]}
boto3 = "^1.26.64"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
